# rssh-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.txt  rdll-rs.cna  readme.md  rssh-rs.cna  rust-toolchain.toml
bof-vs/BOF-Template/: BOF-Template.vcxproj  bof.cpp
bof-vs/x64/Release/: bof.x64.o.orig
bof-write-pipe/: bof.c
dll/: Cargo.toml  build.rs
dll/c_src/: c_entry.c
dll/src/: ffi.rs  lib.rs  pipe.rs  windows.rs
exe/: Cargo.toml
exe/src/: main.rs
xtask/src/: main.rs
