[package]
name = "dll-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "dll_rs"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
cc = "1.2.22"

[dependencies]
russh = "0.52.1"
russh-keys = "0.49.2"
windows-sys = {version = "0.59.0", features = ["default", "Win32_System_Pipes", "Win32_System_IO", "Win32_Storage_FileSystem", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_Threading"]}
debug_print = "1.0.0"
pollster = "0.3"
tokio = "1.45.1"
