[package]
name = "dll-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "dll_rs"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
cc = "1.2.22"

[profile.release]
strip = "symbols"
panic = "abort"
opt-level = "z"
codegen-units = 1
lto = true

[dependencies]
russh = "0.54.1"
windows-sys = {version = "0.59.0", features = ["default", "Win32_System_Pipes", "Win32_System_IO", "Win32_Storage_FileSystem", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_Threading"]}
debug_print = "1.0.0"
tokio = "1.45.1"
